# calciumcurator

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: flake8_black.yml  make_release.yml
calciumcurator/: __init__.py  __main__.py  calcium_curator.py  contour_manager.py  register_sessions.py  view_cli.py
calciumcurator/extensions/: __init__.py  cell_mask.py  lineplot.py  threshold.py
calciumcurator/images/: masks.py
calciumcurator/io/caiman/: _vendored.py  caiman_reader.py
calciumcurator/io/s2p/: s2p_reader.py
calciumcurator/io/utils/: data_range.py
calciumcurator/qt/: dock_widgets.py  mode_controls.py  plots.py  registration_widgets.py
resources/: CalciumCurator_figures.afdesign
test_data/: OF.mat  TM.mat  TM40.mat  data_source.txt
