[metadata]
name = calciumcurator
url = https://github.com/donatolab/calciumcurator
download_url = https://github.com/donatolab/calciumcurator
license = BSD 3-Clause
license_file = LICENSE
description = a GUI for curating and exploring calcium imaging data
long_description = file: README.md
long_description_content_type = text/markdown
author = Donato Lab
classifiers =
    Development Status :: 3 - Alpha
    Environment :: X11 Applications :: Qt
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GPL License
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    h5py
    napari[all]
    numpy
    pyqtgraph
    scikit-image

[flake8]
# Ignores - https://lintlyci.github.io/Flake8Rules
# E203  Whitespace before ':'  (sometimes conflicts with black)
# E501 line too long (84 > 79 characters)  (sometimes too annoying)
# W503	Line break occurred before a binary operator
# C901 McCabe complexity test. Would be nice to re-enable, but takes work
ignore = E203,W503,E501,C901
max-line-length = 79
max-complexity = 18
exclude = vendored|__init__.py|examples|setup.py